@@ -35,6 +35,7 @@ next version - not yet released
  FIXED  : Ticket #1212, Playing "Recent File" clears playlist, even though playlist contains file
  FIXED  : Ticket #1220, MPC fails to play specific MKV files
  FIXED  : Ticket #1321, IMpegSplitterFilter uses CString - should be WCHAR or BSTR instead
+ FIXED  : DVB, Channel switching for H-264 services is more stable now
 
 
 v1.5.1.2903 - 29 February 2011
